tests/fixtures/positive/naming/BooleanPropertyNaming.kt
package naming

class Example {
    val enabled: Boolean = true
    val visible: Boolean = false
}
