tests/fixtures/negative/naming/NonBooleanPropertyPrefixedWithIs.kt
package naming

class Example {
    val isEnabled: Boolean = true
}
